12 July 2004 Andreas Fabri
- Point_container now stores an iterator range instead of a real point list

8 July 2004 Andreas Fabri
- Use Compact_container::construct_insert instead of insert
- Replaced list with vector in Kd_tree

28 May 2004 Sylvain Pion
- Fix Windows end of line in dont_submit.

27 May 2004 Radu Ursu
- updated headers in include/CGAL 

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

04 May 2004 Andreas Fabri
- Removed ~Point_container() as it does nothing and leads to error messages for SunProCC

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION

10 February 2004 Radu Ursu
-Updated headers in examples

Version 4.25 (20 October 2003) [af]
- Added #include <vector> to Kd_tree.h

Version 4.24 (20 October 2003) [af]
- Removed #include<CGAL/Cartesian.h> from Kd_tree.h and put it in the examples 

Version 4.23 (17 October 2003) [af]
- Added \label to the chapters

Version 4.18 (7 October 2003) [af]
- Prefix intro.tex with "Spatial_searching/"

Version 4.17 (30 September 2003) [af]
- Moved \chapter from intro.tex to main.tex

Version 4.16 (30 September 2003) [af]
- Changed doc_tex/basic/Spatial_searching_ref/introdcution.tex to intro.tex

Version 4.08 (15 September 2003) [rursu]
- Qt_help_window is in the CGAL namespace now

Version 4.04 (10 September 2003) [rursu]
- Qt_help_window is in the CGAL namespace now

Version 3.46 (08 September 2003) [rursu]
- demo use now the new help class Qt_help_window instead of HelpWindow
- demo use the new demo icon demoicon


Version 3.38 (2 August 2003) [af]
- Removed  template <> in example/Kdtree_example_3.C

Version 3.37 (31 July 2003) [af]
- Fixed typo in Weighted_Minkowski_distance.h: The_distance -> the_distance 

Version 3.36 (30 July 2003)
rursu:
 - fixed Kdtree_example3.C for cl_1300 by providing the full spec of Kernel_traits

Version 3.32 (20 July 2003) [af]
- fixed makefile problem on Irix