@@ -52,23 +52,27 @@ public:
 
 private:
 
-  Splitter split;
-  Compact_container<Node> nodes;
+  mutable Splitter split;
+  mutable Compact_container<Node> nodes;
 
-  Node_handle tree_root;
+  mutable Node_handle tree_root;
 
-  Kd_tree_rectangle<SearchTraits>* bbox;
-  std::vector<Point_d> pts;
+  mutable Kd_tree_rectangle<SearchTraits>* bbox;
+  mutable std::vector<Point_d> pts;
 
   // Instead of storing the points in arrays in the Kd_tree_node
   // we put all the data in a vector in the Kd_tree.
   // and we only store an iterator range in the Kd_tree_node.
   // 
-  std::vector<Point_d*> data;
+  mutable std::vector<Point_d*> data;
   SearchTraits tr;
 
+
+  mutable bool built_;
+
   // protected copy constructor
-  Kd_tree(const Tree& tree) 
+  Kd_tree(const Tree& tree)
+    : built_(tree.built_)
   {};
 
 
@@ -78,7 +82,7 @@ private:
 
   // The leaf node
   Node_handle 
-  create_leaf_node(Point_container& c)
+  create_leaf_node(Point_container& c) const
   {
     Node_handle nh = nodes.construct_insert(c.size(), Node::LEAF);
 
@@ -90,13 +94,13 @@ private:
   // The internal node
 
   Node_handle 
-  create_internal_node(Point_container& c, const Tag_true&)
+  create_internal_node(Point_container& c, const Tag_true&) const
   {
     return create_internal_node_use_extension(c);
   }
 
   Node_handle 
-  create_internal_node(Point_container& c, const Tag_false&)
+  create_internal_node(Point_container& c, const Tag_false&) const
   {
     return create_internal_node(c);
   }
@@ -108,7 +112,7 @@ private:
   //       It is not proper yet, but the goal was to see if there is
   //       a potential performance gain through the Compact_container
   Node_handle 
-  create_internal_node_use_extension(Point_container& c) 
+  create_internal_node_use_extension(Point_container& c)  const
   {
     Node_handle nh = nodes.construct_insert(Node::EXTENDED_INTERNAL);
     
@@ -141,7 +145,7 @@ private:
   // Note also that I duplicated the code to get rid if the if's for
   // the boolean use_extension which was constant over the construction
   Node_handle 
-  create_internal_node(Point_container& c) 
+  create_internal_node(Point_container& c) const
   {
     Node_handle nh = nodes.construct_insert(Node::INTERNAL);
     
@@ -160,20 +164,27 @@ private:
     }
     return nh;
   }
-  
+
 
 
 public:
 
-  //introduced for backward compability
-  Kd_tree() {}
+  Kd_tree(Splitter s = Splitter())
+    : split(s), built(false)
+  {}
   
   template <class InputIterator>
   Kd_tree(InputIterator first, InputIterator beyond,
-	Splitter s = Splitter()) : split(s) 
+	  Splitter s = Splitter()) 
+    : split(s), built_(false) 
   {
     assert(first != beyond);
     std::copy(first, beyond, std::back_inserter(pts));
+  }
+
+  void 
+  build() const
+  {
     const Point_d& p = *pts.begin();
     typename SearchTraits::Construct_cartesian_const_iterator_d ccci;
     int dim = std::distance(ccci(p), ccci(p,0)); 
@@ -189,13 +200,46 @@ public:
     }else {
       tree_root = create_internal_node(c, UseExtendedNode()); 
     }
+    built_ = true;
   }
 
+  bool is_built() const
+  {
+    return built_;
+  }
+
+  bool invalidate_built()
+  {
+    if(is_built()){
+      c.clear();
+      delete bbox;
+      built_ = false;
+    }
+  }
+
+  void
+  insert(const Point_d& p)
+  {
+    invalidate_built();
+    pts.push_back(p);
+  } 
  
+  template <class InputIterator>
+  void 
+  insert(InputIterator first, InputIterator beyond)
+  {
+    invalidate_built();
+    std::copy(first, beyond, std::back_inserter(pts));
+  }
+
+
   template <class OutputIterator, class FuzzyQueryItem>
   OutputIterator 
   search(OutputIterator it, const FuzzyQueryItem& q) 
   {
+    if(! is_built()){
+      build();
+    }
     Kd_tree_rectangle<SearchTraits> b(*bbox);
     tree_root->search(it,q,b);
     return it;
@@ -215,18 +259,27 @@ public:
   Node_handle 
   root() const 
   { 
+    if(! is_built()){
+      build();
+    }
     return tree_root; 
   }
 
   void
   print() const
   {
+    if(! is_built()){
+      build();
+    }
     root()->print();
   }
 
   const Kd_tree_rectangle<SearchTraits>&
   bounding_box() const 
   {
+    if(! is_built()){
+      build();
+    }
     return *bbox; 
   }
 
@@ -252,6 +305,9 @@ public:
   std::ostream& 
   statistics(std::ostream& s) 
   {
+    if(! is_built()){
+      build();
+    }
     s << "Tree statistics:" << std::endl;
     s << "Number of items stored: " 
       << tree_root->num_items() << std::endl;
